# personal-website

./: .gitattributes  .gitignore  .pandoc-plot.yml  .pandoc-pyplot.yml  404.html  CNAME  LICENSE  README.md  about-site.html  about.html  archive.html  atom.xml  cabal.project  cabal.project.freeze  deploy.ps1  deploy.py  email.html  feed.xml  index.html  personal-page.cabal  personal-website.cabal  publications.html  requirements.txt  sitemap.xml  software.html  stack.yaml
.github/workflows/: compile-sass.yml  gh-pages.yml
css/: style.css  style.css.map  syntax.css
docs/: 404.html  about.html  archive.html  atom.xml  feed.xml  index.html  software.html
docs/css/: style.css.map
docs/posts/: banner.html  bulma-pandoc-filter.html  genesis.html  making-this-website.html  mnxc.html  two-temp-model.html
files/: multiverse  multiverse.hs  plot_style.py
files/rolling-stats/: AAPL.csv  Rolling
files/trading-strats/: TradingStrats.hs
files/typed-dimensions/TypedDimensions/: Typed  Typed.hs  Untyped
files/wavelet-filter/: diffraction.csv
images/: plot_style.py
images/autocenter/: graphite.tif  graphite_mask.tif
js/: navbar-onclick.js
posts/: 2018-08-01-genesis.md  2018-08-02-making-this-website.md  HKTGenerics.html  HKTGenerics.lhs  algebra-stoploss.html  algebra-stoploss.md  autocenter.html  autocenter.md  banner.html  banner.md  binary-search.md  bulma-pandoc-filter.html  bulma-pandoc-filter.md  chesterton.html  chesterton.md  coffee-table.html  coffee-table.md  condagui-part1-skeleton.md  condagui-part2-signals.md  cpa-nobel.md  existential.html  existential.md  genesis.html  genesis.md  integral-transforms.md  joined-hf-board.html  joined-hf-board.md  making-this-website.html  making-this-website.md  mnxc.html  mnxc.md  multiverse.html  multiverse.md  pandoc-pyplot.md  pid_control.md  pitfalls-scicode.md  powerweave-launch.html  powerweave-launch.md  prelim.html  prelim.md  (+12 more)
posts/drafts/: 2018-08-05-integral-transforms-part1.md  condagui-part1-skeleton.md  condagui-part3-controller.md  fdtd.html  fdtd.md  fire-cooldown.md  haskell-monoids.md  integral-transforms-part1.md  integral-transforms.md  no-llm-code-assistants.html  notable-haskell-functions.html  two-temp-model.md
posts/servant-by-construction/: ApiAsType.html  ApiAsType.lhs  GeneratingAClient.html  GeneratingAClient.lhs  ServingAnApi.html  ServingAnApi.lhs  TypeSafeLinks.html  TypeSafeLinks.lhs
projects/: beam.md  cloud-haskell.md  hakyll-images.md  hakyll.md  javelin.md  npstreams.md  pandoc-plot.md  pandoc-pyplot.md  tree-sitter-literate-haskell.md
projects/scientific/: crystals.md  iris-ued.md  npstreams.md  repa.md  scikit-ued.md
sass/: style.scss
scripts/: deploy.ps1  mkbanner.py  mkcss.ps1
src/: BulmaFilter.hs  BulmaTemplate.hs  CompressJpg.hs  Feed.hs  ReadingTimeFilter.hs  Template.hs  Templates.hs  monokai.hs  site.hs
static/: 404.md  about-site.md  about.md  email.md  index.html  media_list.md  publications.md  scidoc_privacy_policy.md  software.md
tags/: cryptocurrencies.html  finance.html  haskell-foundation.html  haskell.html  mathematics.html  meta.html  personal.html  python.html  science.html  servant by construction.html  software engineering.html  web.html
templates/: archive.html  default-backup.html  default.html  github-card.html  post-list.html  post.html  project.html  projects.html  tag.html
tools/: Cargo.toml
tools/src/: minifier.rs
