name:                personal-website
version:             1.4.2
-- synopsis:
-- description:
homepage:            https://laurentrdc.xyz
license:             BSD3
license-file:        LICENSE
author:              Laurent P. René de Cotret
maintainer:          laurent.decotret@outlook.com
copyright:           2018-present Laurent P. René de Cotret
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable personal-website
  hs-source-dirs:      src
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded 
                       -with-rtsopts=-N
                       -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  build-depends:       base >= 4.14 && < 5,
                       containers,
                       doctemplates,
                       filepath,
                       hakyll >= 4.16.0.0,
                       hakyll-images >= 1.2.0,
                       pandoc > 2.11,
                       pandoc-types,
                       pandoc-plot >= 1.5.3,
                       blaze-html,
                       blaze-markup,
                       bytestring,
                       time,
                       text,
                       typed-process >= 0.2.8.0 && <1

  other-modules:       Template, BulmaFilter, Feed, ReadingTimeFilter

executable multiverse
  hs-source-dirs:      files
  main-is:             multiverse.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wpartial-fields
  build-depends:       base >= 4.14 && < 5,
                       containers

library rolling
  hs-source-dirs:      files/rolling-stats
  default-language:    GHC2021
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wpartial-fields
  exposed-modules:     Rolling
  build-depends:       base >= 4.14 && < 5,
                       statistics,
                       vector
