cabal-version:       3.0
name:                personal-website
version:             1.4.3
-- synopsis:
-- description:
homepage:            https://laurentrdc.xyz
license:             BSD-3-Clause
license-file:        LICENSE
author:              Laurent P. René de Cotret
maintainer:          Laurent P. René de Cotret
copyright:           2018-present Laurent P. René de Cotret
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable personal-website
  hs-source-dirs:      src
  main-is:             site.hs
  default-language:    GHC2024
  -- We are not using multicore behavior
  -- due to non-deterministic errors that can arise due to locks
  -- on file reading. This is as of Hakyll version 4.16.2.0;
  -- this problem may be resolved in the future.
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wunused-packages
  build-depends:       base >= 4.14 && < 5,
                       containers >=0.6 && <0.8,
                       filepath,
                       hakyll >= 4.16.2.0,
                       hakyll-images >= 1.2.0,
                       pandoc > 3.0 && <4,
                       pandoc-types,
                       pandoc-plot >= 1.5.3,
                       blaze-html,
                       bytestring,
                       time,
                       text >=2 && <3,
                       typed-process >= 0.2.8.0 && <1

  other-modules:       Template, BulmaFilter, Feed, ReadingTimeFilter

executable multiverse
  hs-source-dirs:      files
  main-is:             multiverse.hs
  default-language:    GHC2024
  build-depends:       base >=4.14 && <5,
                       containers

library rolling
  hs-source-dirs:      files/rolling-stats
  default-language:    GHC2024
  exposed-modules:     Rolling
  build-depends:       base >=4.14 && <5,
                       statistics,
                       vector

library trading-strats
  hs-source-dirs:      files/trading-strats
  default-language:    GHC2024
  exposed-modules:     TradingStrats
  build-depends:       base       >=4.14 && <5
                     , containers >=0.6 && <0.8
                     , javelin   ^>=0.1 
                     , pipes      >=4.3  && <5
                     , time      ^>=1.12
