[package]
name = "site-tools"
version = "0.1.0"
authors = ["Laurent P. René de Cotret"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
minifier = "~0.0"
minify = "~1.2"

[[bin]]
name = "minifier"
path = "src/minifier.rs"
test=false
bench=false